--- a/formularios.html
+++ b/formularios.html
@@ -38,6 +38,28 @@
                 <label for="">Contraseña</label>
                 <input type="password">
             </div>
+            
+                        <label for="">Nombre completo</label>
+            <input type="" name="" id="">
+            <label for="">Email</label>
+            <input type="email" name="" id="">
+            <label for="">Fecha de nacimiento</label>
+            <input type="date" name="" id="">
+            <label for="">Elija una opcion</label>
+            <select name="" id="">
+                <option value="">Elija una opcion</option>
+                <option value="">Opcion 1</option>
+                <option value="">Opcion 2</option>
+                <option value="">Opcion 3</option>
+                <option value="">Opcion 4</option>
+            </select>
+            <button>button sin input</button> 
+            <input type="submit" value="SUBMIT"> <!--usar este en formularios-->
+            <input type="button" value="button con input">
+            <label for="">Comentario</label>
+            <textarea name="" id="" cols="30" rows="10"></textarea>
+            <label for="">Seleccionar archivos</label>
+            <input type="file" name="" id="">
         </form>
     </main>
     <footer></footer>
